# Light_HLS

LLVM_Tutorial/: .gitignore  BuildLibs.sh  README.md  llvm16_build.txt.md
LLVM_Tutorial/HLS_Data_Lib/: README  extractinst.py  output.xlsx
LLVM_Tutorial/Implementations/: CMakeLists.txt
LLVM_Tutorial/Implementations/HI_Test/: CMakeLists.txt  HI_Test.cc  HI_Test.h  README.md
LLVM_Tutorial/Patch_for_LLVM/: D59105.diff
Pass-Order/: .gitignore  Pass-Order.md  cycles_chstone.pkl
Pass-Order/run_0_p3288439/: Makefile  adpcm.1.bc  adpcm.1.ll  adpcm.acel_cycle.rpt  adpcm.bc  adpcm.ll  adpcm.postlto.6.bc  adpcm.postlto.6.ll  adpcm.postlto.8.bc  adpcm.postlto.8.ll  adpcm.postlto.bc  adpcm.postlto.ll  adpcm.prelto.1.bc  adpcm.prelto.1.ll  adpcm.prelto.6.bc  adpcm.prelto.6.ll  adpcm.prelto.bc  adpcm.prelto.linked.1.bc  adpcm.prelto.linked.bc  adpcm.prelto.linked.ll  adpcm.prelto.ll  binding.legup.rpt  dfg.@main_%.loopexit.i.i.i.dot  dfg.@main_%.preheader.dot  dfg.@main_%.preheader35.dot  dfg.@main_%.preheader36.dot  dfg.@main_%.preheader38.dot  dfg.@main_%.preheader39.dot  dfg.@main_%.preheader41.dot  dfg.@main_%.preheader42.dot  dfg.@main_%.preheader44.dot  dfg.@main_%.preheader45.dot  dfg.@main_%.preheader47.dot  dfg.@main_%.preheader48.dot  dfg.@main_%.preheader49.dot  dfg.@main_%1.dot  dfg.@main_%110.dot  dfg.@main_%116.dot  dfg.@main_%12.dot  dfg.@main_%14.dot  (+71 more)
Pass-Order/run_0_p3295363/: Makefile  adpcm.1.bc  adpcm.1.ll  adpcm.bc  adpcm.ll  adpcm.lli_bb.trace  adpcm.postlto.6.bc  adpcm.postlto.6.ll  adpcm.postlto.8.bc  adpcm.postlto.8.ll  adpcm.postlto.bc  adpcm.v  (+106 more)
(+221 files in other folders)
